--- a/project BM.ipynb
+++ b/project BM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import timeit\n",
     "import string\n",
+    "import psutil,os\n",
     "\n",
     "def z_array(s):\n",
     "    \"\"\" Use Z algorithm (Gusfield theorem 1.4.1) to preprocess s \"\"\"\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,15 +242,8 @@
     "            skip_gs = p_bm.match_skip()\n",
     "            shift = max(shift, skip_gs)\n",
     "        i += shift\n",
-    "    return occurrences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return occurrences\n",
+    "###################################################\n",
     "def boyer_moore_3(pattern, p_bm, text):\n",
     "    #strong good\n",
     "    \"\"\" Do Boyer-Moore matching \"\"\"\n",
@@ -269,15 +263,8 @@
     "            skip_gs = p_bm.match_skip()\n",
     "            shift = max(shift, skip_gs)\n",
     "        i += shift\n",
-    "    return occurrences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return occurrences\n",
+    "############################################################\n",
     "def boyer_moore_4(pattern, p_bm, text):\n",
     "    #bad char\n",
     "    \"\"\" Do Boyer-Moore matching \"\"\"\n",
@@ -297,15 +284,8 @@
     "            skip_gs = p_bm.match_skip()\n",
     "            shift = max(shift, skip_gs)\n",
     "        i += shift\n",
-    "    return occurrences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return occurrences\n",
+    "##############################################################\n",
     "def boyer_moore_5(pattern, p_bm, text):\n",
     "    #weak good & bad char\n",
     "    \"\"\" Do Boyer-Moore matching \"\"\"\n",
@@ -328,15 +308,8 @@
     "            skip_gs = p_bm.match_skip()\n",
     "            shift = max(shift, skip_gs)\n",
     "        i += shift\n",
-    "    return occurrences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return occurrences\n",
+    "########################################################\n",
     "def boyer_moore_6(pattern, p_bm, text):\n",
     "    #strong good & bad char\n",
     "    \"\"\" Do Boyer-Moore matching \"\"\"\n",
@@ -362,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +357,9 @@
     "        boyer_moore_5(pattern, p_bm, text);\n",
     "    else:\n",
     "        boyer_moore_6(pattern, p_bm, text);\n",
-    "\n"
+    "    process = psutil.Process(os.getpid())\n",
+    "    mem = process.memory_info().rss / 1024 / 1024\n",
+    "    print('Used this much memory: ' + str(mem) + 'Mb')\n"
    ]
   },
   {
@@ -399,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -419,23 +394,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text=\"AAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCCCCCCCCCCCCCCCCCCCCCDDDDDDDDDDDDDDDDDDDDDDABACABACDABBBBCABDCABDABDAB\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "78.3 µs ± 826 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "122\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=\"AAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCCCCCCCCCCCCCCCCCCCCCDDDDDDDDDDDDDDDDDDDDDDABACABACDABBBBCABDCABDABDAB\"\n",
+    "print(len(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76.5 µs ± 2.41 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "141 µs ± 8.17 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "109 µs ± 2.59 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "108 µs ± 5.41 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "110 µs ± 5.88 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "88.4 µs ± 8.37 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -450,18 +439,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150 µs ± 2.61 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "Used this much memory: 67.31640625Mb\n",
+      "Used this much memory: 67.31640625Mb\n",
+      "Used this much memory: 67.31640625Mb\n",
+      "Used this much memory: 67.31640625Mb\n",
+      "Used this much memory: 67.31640625Mb\n",
+      "Used this much memory: 67.31640625Mb\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#NE VALJA MERENJE MEMORIJE\n",
+    "exactMaching(1,p_bm, pattern, text)\n",
+    "exactMaching(2,p_bm, pattern, text)\n",
+    "exactMaching(3,p_bm, pattern, text)\n",
+    "exactMaching(4,p_bm, pattern, text)\n",
+    "exactMaching(5,p_bm, pattern, text)\n",
+    "exactMaching(6,p_bm, pattern, text)"
+   ]
   }
  ],
  "metadata": {
@@ -480,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
